# tree-sitter-jq

./: .gitignore  pyproject.toml
bindings/python/: build.py
bindings/python/tree_sitter_jq/: __init__.py  binding.c
